clusters/main/kubernetes/system/networkpolicies/app/kube-system-cilium-operator-hostnetwork.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-operator-hostnetwork
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cilium-operator
      name: cilium-operator
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-prometheus-stack
      toPorts:
        - ports:
            - port: "9963"
              protocol: TCP
  egress:
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 0.0.0.0/0
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
